# MolDyCaT

./: AUTHORS  CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  configure
analysis/MD/: plotMDenergy.gnu  plotmdRDF.gnu
analysis/MD/liquid/: plotliquid.gnu  positions_50000steps.xyz
analysis/clusters/: C2.xyz  C3.xyz  C4.xyz  C5.xyz  C6.xyz  C8.xyz
analysis/defect/: defect.txt  diamond216.txt  diamond216_params.in  interstitial.txt  interstitial.xyz  interstitial_params.in  vacancy.in  vacancy.txt  vacancy_params.in
analysis/defect/graphene/: defect.txt  nodefect.xyz  vacancy.xyz
analysis/defect/nanotubes/: nanotube130.xyz  nanotube130_vacancy.xyz
analysis/elasticConstants/: c44b.sh  c44script.gnu  diamondC11C12_512.txt  diamondC11C12_tama_432.txt  diamondC11C21.fit  diamondC11C21.gnu  diamondC44.gnu  diamondC44_tama.txt  grapheneC11C21.gnu  grapheneC11C21_240.txt
analysis/evCurves/: coordination.txt  energy_conv_nanotube.txt  energy_vol_BCC.txt  energy_vol_FCC.txt  energy_vol_Graphene.txt  energy_vol_HCP.txt  energy_vol_SC.txt  energy_vol_Sn.txt  energy_vol_diamond2.txt  energy_vol_diamond512.txt  energy_vol_linear_chain.txt  energy_vol_nano_13_0.txt  energy_vol_nano_3_0.txt  energy_vol_nano_3_3.txt  energy_vol_nanotube.txt  exampleGnuplotScript.gnu  plotEV-all.gnu  plotEV_basic.gnu  plotEV_convergence.gnu  plotEV_coordination.gnu  plotEV_coordination_bond.gnu  plotEV_nanotubes.gnu
analysis/opt/: info.txt  relax.gnu
analysis/phonons/: gamma_grun.sh  gen_pos_A2u.py  gen_pos_E2ga.py  gen_pos_E2gb.py  gen_pos_X1.py  gen_pos_X3.py  gen_pos_X4.py  gen_pos_gamma.py  gruResults-gamma.txt  omegaGamma.gnu
analysis/phonons/A2u/: A2u_freq.sh  A2u_freq.sh.tmp  A2u_freq.sh.tmp2  gruRes0.txt  (+9 more)
cmake/: FindArmadillo.cmake  MacroEnsureVersion.cmake  OptimizeForArchitecture.cmake
inputs/: diamond.txt  energy_params.in  md_params.in
src/: log  moldycat.cpp
src/anal/: elasticConstants.hpp  evStretcher.hpp  graphiteGenerator.hpp  radial.hpp
src/atom/: atom.cpp  atom.h  vect3.cpp  vect3.h
src/modules/: moduleA.hpp  moduleB.hpp  moduleC.hpp  moduleDnew.hpp  moduleE.hpp  moduleG.hpp
src/moldyphon/: moldyphon  moldyphon.cpp  test.freq
src/opt/: cg.hpp  dmdcm.hpp  dmdum.hpp  factory.hpp  optbase.hpp  sd.hpp
src/sim/: forceeval.hpp  forceeval_DUMMY.hpp  forceeval_lj.hpp  phonon.hpp  phonon_parallel.hpp  simulation.hpp  unitcell.cpp  unitcell.h
src/stepper/: factory.hpp  sprk.hpp  stepperbase.hpp  verlet.hpp
src/thermo/: andersen.cpp  nothermo.cpp  rand.cpp  thermobase.cpp  thermofactory.hpp  velocityscaler.cpp
(+56 files in other folders)
